2003-08-15  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/timidity.[ch]:
	  Support for "Always use program n on channel m" option
	  Support for multi-argument of -Q option
	  Support for "Enable/Disable Temperament control" option
	  Fix typo around short/long options

2003-08-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Support long option for "#extension opt" in timidity.cfg

2003-08-12  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options
	  Rename --patch -> --patch-file

2003-08-12 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options

2003-08-11 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around short/long options

2003-08-10 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (help): rewrite to fit with long options
	  Some option renamed
	  --[no-]modulation-wheel    -> --[no-]mod-wheel
	  --[no-]channel-pressure    -> --[no-]ch-pressure
	  --[no-]modulation-envelope -> --[no-]mod-envelope
	  --[no-]sort-list           -> --[no-]sort

2003-08-10 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Commonize functions between short and long options

2003-08-09 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Some option renamed
	  --mode                  -> --output-mode
	  --stereo                -> --output-stereo
	  --mono                  -> --output-mono
	  --bit-width             -> --output-{16,8}bit
	  --encoding              -> --output-{linear,ulaw,alaw}
	  --[no-]output-byte-swap -> --[no-]output-swab

2003-08-09 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/ncurs_c.c,
	  interface/rtsyn_common.c, interface/server_c.c,
	  timidity/playmidi.c, timidity/timidity.c
	  (opt_realtime_playing, ctl.trace_playing):
	  Fix to fit with long options
	  Commonize parse_opt_O() between short and long options

2003-08-08  TAMUKI Shoichi <tamuki@linet.gr.jp>